# arcgis-to-mapbox

./: .editorconfig  .gitignore  .pylintrc  Makefile  README.md  arcgis_to_mapbox.py  config.py  pyproject.toml  view_style.json
.devcontainer/: Dockerfile  devcontainer.json
arcgis_to_mapbox/: __init__.py  __main__.py  arcgis.py  cli.py  exceptions.py  helpers.py  mapbox.py
docs/: dnr_roads.json  index.rst  michigan_offroad_gis_guid.md  orv_routes.json
gistools/: __main__.py  arcgis.py  cli.py  helpers.py  mapbox.py
recipes/: mi_dnr_roads_2022.json
styles/: mi_dnr_orv_2024.json  mi_dnr_orv_2025.json  mi_dnr_roads_2022.json  mi_dnr_roads_2023.json  mi_dnr_roads_2025.json
tamper-monkey/: gaia-gps-sync.js
tilesets/: mi_dnr_open_trails.yaml  mi_dnr_open_trails_.yaml  mi_dnr_open_trails_2023.yaml  mi_dnr_open_trails_2025.yaml  mi_dnr_open_trails_TEMPLATE.yaml  mi_dnr_roads_.yaml  mi_dnr_roads_2022.yaml  mi_dnr_roads_2023.yaml  mi_dnr_roads_2025.yaml  mi_dnr_roads_TEMPLATE.yaml
